--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "element-plus": "^2.2.36",
     "pinia": "^2.0.33",
     "sass": "^1.58.3",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
