--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "baseUrl": "./",
     "paths": {"@/*":["src/*"]}
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/assets/icon/index.js", "src/assets/icon/index.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
