--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.14.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.15.1",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
