--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.50",
     "@types/node": "^18.14.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.1",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
