--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/shared": "^3.2.47",
     "axios": "^1.3.4",
     "element-plus": "^2.2.36",
+    "mapvgl": "^1.0.0-beta.174",
     "pinia": "^2.0.33",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
