--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "vite-ts-vue3",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "wait-on tcp:8000 && electron .",
+    "electron:serve": "concurrently -k \"npm run dev\" \"npm run electron\"",
+    "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vue/reactivity": "^3.2.47",
     "@vue/shared": "^3.2.47",
     "axios": "^1.3.4",
+    "electron": "^23.1.3",
     "element-plus": "^2.2.36",
     "mapvgl": "^1.0.0-beta.174",
     "pinia": "^2.0.33",
@@ -24,10 +28,34 @@
     "@iconify-json/mdi": "^1.1.50",
     "@types/node": "^18.14.6",
     "@vitejs/plugin-vue": "^4.0.0",
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "electron-builder": "^23.6.0",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.0.24",
+    "wait-on": "^7.0.1"
+  },
+  "build": {
+    "appId": "com.my-website.my-app",
+    "productName": "MyApp",
+    "copyright": "Copyright © 2021 kuari",
+    "mac": {
+      "category": "public.app-category.utilities"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "directories": {
+      "output": "dist_electron",
+      "buildResources": "assets"
+    }
   }
 }
